fix form layout on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -433,6 +433,7 @@ body {
   align-items: flex-start;
   gap: 20px;
   padding: 20px 30px;
+  
 }
 
 .form-header {
@@ -629,7 +630,7 @@ body {
     object-fit: contain;
   }
 
-  .active {
+  .chart-active {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -681,8 +682,10 @@ body {
     top: 0;
     min-width: 100%;
     height: 100vh;
-    z-index: 14;
+    z-index: 20;
     background: var(--clr-bg-white);
+
+   
   }
 
   .share-image {
